crates/toml_edit/fixtures/invalid/control/multi-lf.stderr
TOML parse error at line 1, column 19
  |
1 | multi-lf = """null"""
  |                   ^
Invalid multiline basic string
